--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,13 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "jest"],
   "extends": [
     "airbnb",
     "airbnb/hooks"
   ],
   "env": {
     "browser": true,
+    "jest/globals": true 
   },
   "rules": {
     "react/react-in-jsx-scope": "off",
